--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Organizzate</title>
+    <title>Organizzate | Inicio</title>
     <link rel="shortcut icon" href="./assets/logos/3.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/stylesheet.css">
 </head>
 
@@ -48,17 +49,51 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h1 class="titulo-principal">Organizzate</h1>
-                        <h2 class="slogan">Ordená tus espacios y simplificá tu vida.</h2>
-                        <h3 class="pitch">Te ayudo a transformar tu hogar y oficina
-                            para organizar tu día a día.</h3>
+                        <div data-aos="fade-right">
+                            <h1 class="titulo-principal">Organizzate</h1>
+                            <h2 class="slogan">Ordená tus espacios y simplificá tu vida.</h2>
+                            <h3 class="pitch">Te ayudo a transformar tu hogar y oficina
+                                para organizar tu día a día.</h3>
+                        </div>
                         <button type="button" class="btn btn-dark agendar-asesoria"><a
                                 class="text-light text-decoration-none" href="./pages/contacto.html">¡Agendá una
                                 asesoría!</a></button>
                     </div>
-                    <div class="col-md-6">
-                        <img src="./assets/images/doublecloset.png" class="img-fluid imagen-portada"
-                            alt="Imagen portada organización de closet">
+                    <div class="col-md-6 mt-4">
+                        <div id="carouselExampleFade" class="carousel slide carousel-fade">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                    class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                    aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                    aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="./assets/images/closetshoes.png" class="d-block w-100 rounded"
+                                        alt="Imagen de closet con ropa de mujer ordenada">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./assets/images/bathroomdrawer.png" class="d-block w-100 rounded"
+                                        alt="Imagen de baño ordenado">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./assets/images/kitchenpantryshelf.png" class="d-block w-100 rounded"
+                                        alt="Imagen de alacena de cocina ordenada">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
                     </div>
                 </div>
         </section>
@@ -76,39 +111,39 @@
                         Enlaces
                     </h3>
                     <ul class="footer-list">
-                        <li>
+                        <li class=mb-2>
                             <a href="#" class="footer-link">Inicio</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="./pages/organizzate.html" class="footer-link">Organizzate</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="./pages/servicios.html" class="footer-link">Servicios</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="./pages/inspirate.html" class="footer-link">Inspirate</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="./pages/contacto.html" class="footer-link">Contacto</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <h3 class="footer-title">
+                    <h3 class="footer-title ms-3">
                         Redes
                     </h3>
                     <ul class="footer-list">
                         <li>
                             <img class="iconos-footer-img" src="./assets/images/whatsapp.png" alt="Icono Whatsapp">
-                            <a href="#" class="footer-link">Whatsapp </a>
+                            <a href="https://www.whatsapp.com/" target="_blank" class="footer-link">Whatsapp </a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="./assets/images/instagram.png" alt="Icono Instagram">
-                            <a href="#" class="footer-link">Instagram</a>
+                            <a href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="./assets/images/facebook.png" alt="Icono Facebook">
-                            <a href="./pages/servicios.html" class="footer-link">Facebook</a>
+                            <a href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
                         </li>
                     </ul>
                 </div>
@@ -118,6 +153,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>         AOS.init();       </script>
 </body>
 
 </html>
