--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Organizzate</title>
+    <title>Organizzate | Contacto</title>
     <link rel="shortcut icon" href="./assets/logos/3.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/stylesheet.css">
 </head>
 
@@ -44,45 +45,64 @@
         </nav>
     </header>
     <main>
-        <section class="container text-center contenido">
-            <div>
-                <h1 class="slogan">Te ayudo a transformar tus espacios para simplificar tu vida.</h1>
-                <h3 class="pitch">¡Agendá una asesoría!</h3>
-            </div>
-            <div class="row align-items-start contacto">
-                <div class="col-sm-6">
-                    <h2 class="subtitulo">Contactame</h2>
-                    <h3 class="apartado">Enviame un mensaje con tu consulta</h3>
-                    <form action="" class="formulario">
-                        <div>
-                            <label for="nombre">Nombre y Apellido*</label>
-                            <input required type="text" class="form-control">
-                        </div>
-                        <div>
-                            <label for="email">Email</label>
-                            <input type="email" class="form-control" name="email" id="email">
-                        </div>
-                        <div>
-                            <label for="telefono">Teléfono Móvil</label>
-                            <input type="tel" class="form-control" name="telefono" id="phone">
-                        </div>
-                        <div>
-                            <label for="servicio">Servicio a consultar</label>
-                            <input type="text" class="form-control" name="servicio" id="service">
-                        </div>
-                        <div>
-                            <label for="mensaje">Mensaje</label>
-                            <input type="text" class="form-control" name="mensaje" id="message">
-                        </div>
-                        <input type="submit" class="enviar" value="Enviar">
-                    </form>
+        <section class="contenido">
+            <div class="container">
+                <div class="row text-center">
+                    <div data-aos="fade-down">
+                        <h1 class="subtitulo">Te ayudo a transformar tus espacios para simplificar tu vida.</h1>
+                        <h2 class="subapartado">¡Agendá una asesoría!</h2>
+                    </div>
                 </div>
-                <div class="col-sm-6 info-contacto">
-                    <h2 class="subapartado">Información de contacto</h2>
-                    <h4 class="texto">+54 9 11-0000-0000</h4>
-                    <h4 class="texto">organizzate@gmail.com</h4>
-                </div>
-            </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-7">
+                            <h2 class="subapartado">Contactame</h2>
+                            <h3 class="texto">Enviame un mensaje con tu consulta</h3>
+                            <form action="" class="formulario">
+                                <div>
+                                    <label for="nombre">Nombre y Apellido*</label>
+                                    <input required type="text" class="form-control">
+                                </div>
+                                <div>
+                                    <label for="email">Email*</label>
+                                    <input required type="email" class="form-control" name="email" id="email">
+                                </div>
+                                <div>
+                                    <label for="telefono">Teléfono Móvil</label>
+                                    <input type="tel" class="form-control" name="telefono" id="phone">
+                                </div>
+                                <div>
+                                    <label for="servicio">Servicio a consultar</label>
+                                    <select class="form-select" aria-label="Default select example">
+                                        <option selected>Elegí el servicio</option>
+                                        <option value="1">Organización a domicilio</option>
+                                        <option value="2">Organización virtual</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <label for="mensaje">Mensaje</label>
+                                    <input type="text" class="form-control" name="mensaje" id="message">
+                                </div>
+                                <div>
+                                    <input type="submit" class="enviar" value="Enviar">
+                                </div>
+                            </form>
+                        </div>
+                        <div class="col-md-5">
+                            <div class="card border-card">
+                                <div class="card-body">
+                                    <h5 class="card-title subapartado-contacto">Información de contacto</h5>
+                                    <p class="card-text texto-contacto"> <iconify-icon icon="bi:whatsapp"
+                                            class="icono-contacto"></iconify-icon>+54 9
+                                        11-0000-0000 </p>
+                                    <p class="card-text texto-contacto"> <iconify-icon
+                                            icon="material-symbols:mail-outline"
+                                            class="icono-contacto"></iconify-icon>organizzate@gmail.com
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
         </section>
     </main>
     <footer class="footer">
@@ -98,39 +118,39 @@
                         Enlaces
                     </h3>
                     <ul class="footer-list">
-                        <li>
+                        <li class=mb-2>
                             <a href="../index.html" class="footer-link">Inicio</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="./organizzate.html" class="footer-link">Organizzate</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="./servicios.html" class="footer-link">Servicios</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="./inspirate.html" class="footer-link">Inspirate</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="#" class="footer-link">Contacto</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <h3 class="footer-title">
+                    <h3 class="footer-title ms-3">
                         Redes
                     </h3>
                     <ul class="footer-list">
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/whatsapp.png" alt="Icono Whatsapp">
-                            <a href="#" class="footer-link">Whatsapp </a>
+                            <a href="https://www.whatsapp.com/" target="_blank" class="footer-link">Whatsapp </a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/instagram.png" alt="Icono Instagram">
-                            <a href="#" class="footer-link">Instagram</a>
+                            <a href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/facebook.png" alt="Icono Facebook">
-                            <a href="./pages/servicios.html" class="footer-link">Facebook</a>
+                            <a href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
                         </li>
                     </ul>
                 </div>
@@ -140,6 +160,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>         AOS.init();       </script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+
 </body>
 
 </html>
