--- a/pages/inspirate.html
+++ b/pages/inspirate.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Organizzate </title>
+    <title>Organizzate | Inspirate</title>
     <link rel="shortcut icon" href="./assets/logos/3.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/stylesheet.css">
 </head>
 
@@ -44,30 +45,53 @@
         </nav>
     </header>
     <main>
-        <section class="container text-center contenido">
-            <h1 class="subtitulo">Inspirate</h1>
-            <h3 class="subapartado">Descubrí más soluciones para establecer sistemas, simplificar rutinas y
-                organizar tus espacios.</h3>
-        </section>
-        <section class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-sm-6">
-                    <img src="../assets/images/iconolightbulbtips.png" class="iconos-inspirate-img"
-                        alt="Icono Lightbulb para consejos">
-                    <h4 class="apartado">Consejos para empezar a ordenar</h4>
-                    <p class="texto">Empezá a ordenar tus espacios con estos simples consejos.</p>
-                    <button type="button" class="btn btn-dark agendar"><a class="text-light text-decoration-none"
-                            href="https://www.elmueble.com/decoracion/51-trucos-orden-infalibles_41749"
-                            target="_blank">Ver</a></button>
+        <section class="contenido">
+            <div class="container">
+                <div class="row text-center">
+                    <div data-aos="fade-down">
+                        <h1 class="subtitulo">Inspirate</h1>
+                        <h2 class="subapartado">Descubrí más soluciones para establecer sistemas, simplificar rutinas y
+                            organizar tus espacios.</h2>
+                    </div>
                 </div>
-                <div class="col-sm-6">
-                    <img src="../assets/images/iconostarfavorites.png" class="iconos-inspirate-img"
-                        alt="Icono Star para favoritos">
-                    <h4 class="apartado">Mis productos favoritos</h4>
-                    <p class="texto">Agregale funcionalidad a tus espacios con estos productos.</p>
-                    <button type="button" class="btn btn-dark agendar"><a class="text-light text-decoration-none"
-                            href="https://www.colombraro.com.ar/categoria/organizacion/organizadores/organizadores-varios/"
-                            target="_blank">Ver</a></button>
+            </div>
+        </section>
+        <section class="contenido">
+            <div class="container">
+                <div class="row row-cols-1 row-cols-md-2 g-5">
+                    <div class="col mb-4">
+                        <div class="card text-center h-100 border-card">
+                            <img src="../assets/images/kitchencutlery.png" class="card-img-top"
+                                alt="Imagen de cajón con cubiertos de cocina ordenado">
+                            <div class="card-body">
+                                <img src="../assets/images/iconolightbulbtips.png" class="iconos-inspirate-img"
+                                    alt="Icono Lightbulb para consejos">
+                                <h3 class="card-title apartado"> Consejos para empezar a ordenar </h3>
+                                <p class="card-text texto">Empezá a ordenar tus espacios con estos simples consejos.</p>
+                                <button type="button" class="btn btn-dark agendar"><a
+                                        class="text-light text-decoration-none"
+                                        href="https://www.elmueble.com/decoracion/51-trucos-orden-infalibles_41749"
+                                        target="_blank">Ver</a></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-4">
+                        <div class="card text-center h-100 border-card">
+                            <img src="../assets/images/plasticcontainers.png" class="card-img-top"
+                                alt="Imagen de contenedores plásticos para ordenar">
+                            <div class="card-body">
+                                <img src="../assets/images/iconostarfavorites.png" class="iconos-inspirate-img"
+                                    alt="Icono Star para favoritos">
+                                <h3 class="card-title apartado">Mis productos organizadores favoritos</h3>
+                                <p class="card-text texto">Agregale funcionalidad a tus espacios con estos productos.
+                                </p>
+                                <button type="button" class="btn btn-dark agendar"><a
+                                        class="text-light text-decoration-none"
+                                        href="https://www.colombraro.com.ar/categoria/organizacion/organizadores/organizadores-varios/"
+                                        target="_blank">Ver</a></button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -85,39 +109,39 @@
                         Enlaces
                     </h3>
                     <ul class="footer-list">
-                        <li>
+                        <li class=mb-2>
                             <a href="../index.html" class="footer-link">Inicio</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="./organizzate.html" class="footer-link">Organizzate</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="./servicios.html" class="footer-link">Servicios</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="#" class="footer-link">Inspirate</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="./contacto.html" class="footer-link">Contacto</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <h3 class="footer-title">
+                    <h3 class="footer-title ms-3">
                         Redes
                     </h3>
                     <ul class="footer-list">
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/whatsapp.png" alt="Icono Whatsapp">
-                            <a href="#" class="footer-link">Whatsapp </a>
+                            <a href="https://www.whatsapp.com/" target="_blank" class="footer-link">Whatsapp </a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/instagram.png" alt="Icono Instagram">
-                            <a href="#" class="footer-link">Instagram</a>
+                            <a href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/facebook.png" alt="Icono Facebook">
-                            <a href="./pages/servicios.html" class="footer-link">Facebook</a>
+                            <a href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
                         </li>
                     </ul>
                 </div>
@@ -127,6 +151,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>         AOS.init();       </script>
 </body>
 
 </html>
