--- a/pages/organizzate.html
+++ b/pages/organizzate.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Organizzate</title>
+    <title>Organizzate | Conocenos</title>
     <link rel="shortcut icon" href="./assets/logos/3.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/stylesheet.css">
 </head>
 
@@ -47,22 +48,66 @@
         <section class="contenido">
             <div class="container">
                 <div class="row text-center">
-                    <h1 class="subtitulo">Conocé cómo funciona Organizzate</h1>
-                    <p class="texto">Desde chica siempre disfruté de ordenar mis objetos y espacios,
-                        y gracias a esta pasión por la organización simple y funcional nació Organizzate. </p>
+                    <div data-aos="fade-down">
+                        <h1 class="subtitulo">Conocé cómo funciona Organizzate</h1>
+
+                        <p class="texto">Desde chica siempre disfruté de ordenar mis objetos y espacios,
+                            y gracias a esta pasión por la organización simple y funcional nació Organizzate. </p>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6">
-                        <img src="../assets/images/shoescloset.png" class="img-fluid imagen-organizzate"
-                            alt="Imagen portada organización de zapatos">
+                    <div class="col-md-6 mt-4">
+                        <div id="carouselExampleFade" class="carousel slide carousel-fade">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                    class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                    aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                    aria-label="Slide 3"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                                    aria-label="Slide 4"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="../assets/images/calendar.png" class="d-block w-100 rounded"
+                                        alt="Imagen de computadora con calendario abierto">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="../assets/images/budgetmeeting.png" class="d-block w-100 rounded"
+                                        alt="Imagen de reunión de presupuesto">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="../assets/images/kitchenpantry.png" class="d-block w-100 rounded"
+                                        alt="Imagen de mujer ordenando la alacena de la cocina">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="../assets/images/closetwoman.png" class="d-block w-100 rounded"
+                                        alt="Imagen de closet de mujer ordenado">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <ol class="listado">
                             <li class="listado-item">Agendá una asesoría: para conocer tus necesidades y objetivos.</li>
-                            <li class="listado-item">Recibí un presupuesto estimado: según los espacios, el tiempo de organización y los
+                            <li class="listado-item">Recibí un presupuesto estimado: según los espacios, el tiempo de
+                                organización y los
                                 productos a utilizar.</li>
-                            <li class="listado-item">Programá tu servicio de organización: incluye un plan de orden personalizado.</li>
-                            <li class="listado-item">Relajate mientras se transforma tu espacio: se te consultarán todas las dudas para
+                            <li class="listado-item">Programá tu servicio de organización: incluye un plan de orden
+                                personalizado.</li>
+                            <li class="listado-item">Relajate mientras se transforma tu espacio: se te consultarán todas
+                                las dudas para
                                 dejar tus espacios totalmente organizados a tu medida.</li>
                         </ol>
                     </div>
@@ -84,39 +129,39 @@
                         Enlaces
                     </h3>
                     <ul class="footer-list">
-                        <li>
+                        <li class=mb-2>
                             <a href="../index.html" class="footer-link">Inicio</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="#" class="footer-link">Organizzate</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="./servicios.html" class="footer-link">Servicios</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="./inspirate.html" class="footer-link">Inspirate</a>
                         </li>
-                        <li>
+                        <li class=mb-2>
                             <a href="./contacto.html" class="footer-link">Contacto</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <h3 class="footer-title">
+                    <h3 class="footer-title ms-3">
                         Redes
                     </h3>
                     <ul class="footer-list">
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/whatsapp.png" alt="Icono Whatsapp">
-                            <a href="#" class="footer-link">Whatsapp </a>
+                            <a href="https://www.whatsapp.com/" target="_blank" class="footer-link">Whatsapp </a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/instagram.png" alt="Icono Instagram">
-                            <a href="#" class="footer-link">Instagram</a>
+                            <a href="https://www.instagram.com/" target="_blank" class="footer-link">Instagram</a>
                         </li>
                         <li>
                             <img class="iconos-footer-img" src="../assets/images/facebook.png" alt="Icono Facebook">
-                            <a href="./pages/servicios.html" class="footer-link">Facebook</a>
+                            <a href="https://www.facebook.com/" target="_blank" class="footer-link">Facebook</a>
                         </li>
                     </ul>
                 </div>
@@ -126,6 +171,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>         AOS.init();       </script>
 </body>
 
 </html>
